@@ -83,7 +83,13 @@ if (defined($params{'mode'})) {
       if (! defined($info{'vlan'})) {
          my %ConfigVlan;
          tie %ConfigVlan, 'Config::IniFiles', (-file => "$conf_dir/switches.conf");
-         $info{'vlan'}=$ConfigVlan{'default'}{'normalVlan'};                    
+         my @errors = @Config::IniFiles::errors;
+         if ( scalar(@errors) ) {
+             $logger->error( "Error reading switches.conf: " 
+                             .join( "\n", @errors ) . "\n" );
+         } else {
+             $info{'vlan'}=$ConfigVlan{'default'}{'normalVlan'};
+         }
       }
     }
 
