@@ -108,6 +108,8 @@
           (http://www.packetfence.org/mantis/view.php?id=659)
         added Config::IniFiles requirement in node.pm
           (http://www.packetfence.org/mantis/view.php?id=661)
+        better Config::IniFile error handling
+          (http://www.packetfence.org/mantis/view.php?id=660)
 
 1.8.1
         authorized @ as first symbol in password
